# narrFlow

./: README.md
.claude/: settings.local.json
docs/: mvp_general_documentation.md
docs/.claude/: settings.local.json
docs/features/: businss_service.md  frontend.md  tts_service.md
docs/postman/: narrFlow.postman_collection.json
services/audio-renderer-service/: .env.example  .gitignore  pyproject.toml  run.py
services/audio-renderer-service/docs/: audio-renderer.postman_collection.json  service.md
services/audio-renderer-service/src/: config.py  database.py  main.py
services/audio-renderer-service/src/controllers/: tasks_controller.py  voices_controller.py
services/audio-renderer-service/src/models/: task.py  voice.py
services/audio-renderer-service/src/services/: storage.py  tts.py  voice_samples.py
services/audio-renderer-service/tests/: conftest.py  test_tasks.py  test_voices.py
services/audio-renderer-service/tests/services/: test_storage.py  test_tts.py
services/orchestrator-service/: .gitignore  mvnw  mvnw.cmd  pom.xml
services/orchestrator-service/docs/: README.md  orchestrator-service.postman_collection.json
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: axios.ts  books.ts  content.ts  personas.ts  transformations.ts  voices.ts
ui/src/components/: AppLayout.tsx  BookCard.tsx  PersonaSelector.tsx  PlayerControls.tsx  StatusBadge.tsx
ui/src/pages/: BookViewerPage.tsx  BooksLibraryPage.tsx  LandingPage.tsx  LoginPage.tsx  NewTransformationPage.tsx  PlayerPage.tsx  (+2 more)
(+117 files in other folders)
